<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".ui.login.LoginActivity">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="114dp"
            android:layout_gravity="center"
            android:layout_marginBottom="64dp"
            android:gravity="center">

            <TextView
                android:id="@+id/chat_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_marginLeft="52dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif"
                android:text="Trip"
                android:textColor="@color/textColor"
                android:textSize="66sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.888" />

            <FrameLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignRight="@id/chat_text"
                android:layout_alignBottom="@id/chat_text"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/box_pink"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.521"
                app:layout_constraintStart_toEndOf="@+id/chat_text"
                app:layout_constraintTop_toTopOf="parent">

            </FrameLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/email"
            android:layout_width="@dimen/textbox_width"
            android:layout_height="@dimen/textbox_height"
            android:layout_gravity="center"
            android:layout_marginBottom="48dp"
            android:background="@drawable/textbox"
            android:elevation="10dp"
            android:gravity="center"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="@dimen/padding_regular"
            android:singleLine="true"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/password"
            android:layout_width="@dimen/textbox_width"
            android:layout_height="@dimen/textbox_height"
            android:layout_gravity="center"
            android:background="@drawable/textbox"
            android:elevation="10dp"
            android:gravity="center"
            android:hint="@string/prompt_password"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/padding_regular"
            android:singleLine="true"
            android:textStyle="italic" />

        <Button
            android:id="@+id/login"
            android:layout_width="200dp"
            android:layout_height="43dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_selector"
            android:elevation="10dp"
            android:text="@string/action_sign_in"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/register"
            android:layout_width="200dp"
            android:layout_height="43dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_regular"
            android:background="@drawable/btn_selector"
            android:elevation="10dp"
            android:onClick="RegisterActivity"
            android:text="@string/action_register"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />
    </LinearLayout>
</ScrollView>
